Bug 153023 - NatNum12 number format (spell out): thousand separator should be disabled
Summary: NatNum12 number format (spell out): thousand separator should be disabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.1 rc
Hardware: All All
: medium normal
Assignee: Laurent Balland
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: Number-Format
  Show dependency treegraph
 
Reported: 2023-01-14 11:06 UTC by Laurent Balland
Modified: 2023-02-13 09:21 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2023-01-14 11:06:01 UTC
If NatNum12 modifier is used in a number format, there is no effect to add a thousand separator or increase the number of leading zeroes:
[NatNum12 cardinal]0
will give same result as
[NatNum12 cardinal]000
or
[NatNum12 cardinal]#,##0
So checkbox "Thousand separator" and field "Leading zeroes" should be disabled in Number format dialog or Sidebar

Steps to reproduce:
1. Select Format > Cells > Numbers, Category: Number
2. Select Format: One Hundred

Actual behavior:
checkbox "Thousand separator" and field "Leading zeroes" are enabled

Expected behavior:
checkbox "Thousand separator" and field "Leading zeroes" should be disabled
Comment 1 Laurent Balland 2023-01-14 14:49:19 UTC
I'm wrong with leading zeros: it could be 0 or 1
[NatNum12 cardinal]0
gives "zero"
whereas
[NatNum12 cardinal]#
gives empty string.
Comment 2 Commit Notification 2023-02-03 17:57:13 UTC
Laurent Balland committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bbd487dc26c7e37982f64f6e6159c65ac77a89f1

tdf#153023 Disable Thousand separator for NatNum12

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-02-13 09:21:56 UTC
Laurent Balland committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/69b9f50ee8c76fa6193165369ab8235cd125247e

tdf#152722 tdf#153023 Add UITest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.